# auto-secret-operator

./: .Mk.yaml  .dockerignore  Cargo.toml  Dockerfile  README.md
.github/actions/rust-build/: action.yaml
.github/workflows/: check.yaml  doc.yaml  release.yaml
charts/auto-secret-operator/: README.md  values.yaml
